[package]
name = "lser"
version = "0.2.1"
edition = "2018"
authors = ["Xiaoqing Ma <rede1997@outlook.com>"]
license = "MIT"
description = "A cli tool to list serial port writen in rust"
homepage = "https://github.com/rede97/lser"
repository = "https://github.com/rede97/lser"
include = ["Cargo.toml", "src/**/*.rs", "README.md"]
keywords = ["serial", "tty", "UART"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serial_enumerator = "0.3.1"
rich_rust = "=0.2.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
